csv format, dataprep

--- a/rainchance.ipynb
+++ b/rainchance.ipynb
@@ -29,7 +29,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deBilt"
+    "deBilt.dropna(subset=['RD','SX'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deBilt['RD'] = deBilt['RD'].fillna(0)\n",
+    "deBilt['SX'] = deBilt['SX'].fillna(0)\n",
+    "\n",
+    "deBilt['RD'] = deBilt['RD'].astype('int64')\n",
+    "deBilt['SX'] = deBilt['SX'].astype('int64')\n",
+    "\n",
+    "deBilt.describe()"
    ]
   },
   {
