--- a/rainchance.ipynb
+++ b/rainchance.ipynb
@@ -9,7 +9,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import math"
+    "import math\n",
+    "import urllib.parse\n",
+    "import urllib.request\n",
+    "import json"
    ]
   },
   {
@@ -21,7 +24,7 @@
     "\"\"\"\n",
     "KONINKLIJK NEDERLANDS METEOROLOGISCH INSTITUUT (KNMI)\n",
     "\"\"\"\n",
-    "deBilt = pd.read_csv('neerslaggeg_DE-BILT_550.csv', parse_dates=['YYYYMMDD'])"
+    "# deBilt = pd.read_csv('neerslaggeg_DE-BILT_550.csv', parse_dates=['YYYYMMDD'])"
    ]
   },
   {
@@ -125,13 +128,6 @@
    "source": [
     "x = fpy.plot(figsize=(16,14))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
