--- a/Adviesrapport.ipynb
+++ b/Adviesrapport.ipynb
@@ -18,6 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Er zijn een aantal verschillende stakeholders te indentificeren die te maken hebben met het werk dat Hydrologic doet. Een burger heeft b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. Probleem- en vraagstelling"
    ]
   },
