Rain chance ocer 20 years

--- a/rainchance_hourly.ipynb
+++ b/rainchance_hourly.ipynb
@@ -103,7 +103,7 @@
     "Count the times a certain amount of rain occured (max time 1 hour)\n",
     "\"\"\"\n",
     "\n",
-    "rainRanges = [*range(2, 10, 2), *range(10, 50, 10), *range(50, 300, 50)]\n",
+    "rainRanges = [*range(2, 10, 2), *range(10, 50, 10), *range(50, 350, 50)]\n",
     "freq = {}\n",
     "\n",
     "for year in range(deBilt['YYYYMMDD'].dt.year.min(), deBilt['YYYYMMDD'].dt.year.max()+1):\n",
@@ -131,19 +131,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "x = fpy.plot(figsize=(16,14),colormap=\"winter\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "deBilt"
    ]
   },
   {
@@ -165,7 +158,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Specifieke regen val X n maal in 50 jaar\n",
+    "fpy.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fpy.mean() * 20"
+   ]
   }
  ],
  "metadata": {
