adding a legend to picture

--- a/water influence.ipynb
+++ b/water influence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,234 +13,11 @@
     "import math\n",
     "import urllib.parse\n",
     "import urllib.request\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DREMPEL = 2 #cm\n",
-    "YEARS = 20\n",
-    "SAG = 0.1 #cm/year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "houses = pd.read_csv('data/waterInHuizen.csv', usecols=['FID','MAX'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>FID</th>\n",
-       "      <th>MAX</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7</td>\n",
-       "      <td>1.724000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>35</td>\n",
-       "      <td>1.673000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>80</td>\n",
-       "      <td>1.583256</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>109</td>\n",
-       "      <td>1.699000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>118</td>\n",
-       "      <td>1.590000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>582</th>\n",
-       "      <td>4811</td>\n",
-       "      <td>1.702000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>583</th>\n",
-       "      <td>4821</td>\n",
-       "      <td>1.865000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>584</th>\n",
-       "      <td>4823</td>\n",
-       "      <td>1.585542</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>585</th>\n",
-       "      <td>4824</td>\n",
-       "      <td>1.588509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>586</th>\n",
-       "      <td>4841</td>\n",
-       "      <td>1.650000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>587 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      FID       MAX\n",
-       "0       7  1.724000\n",
-       "1      35  1.673000\n",
-       "2      80  1.583256\n",
-       "3     109  1.699000\n",
-       "4     118  1.590000\n",
-       "..    ...       ...\n",
-       "582  4811  1.702000\n",
-       "583  4821  1.865000\n",
-       "584  4823  1.585542\n",
-       "585  4824  1.588509\n",
-       "586  4841  1.650000\n",
-       "\n",
-       "[587 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "houses"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>FID</th>\n",
-       "      <th>MAX</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>425</td>\n",
-       "      <td>2.186000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>795</td>\n",
-       "      <td>2.458250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>851</td>\n",
-       "      <td>2.202063</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>891</td>\n",
-       "      <td>2.448000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>292</th>\n",
-       "      <td>3825</td>\n",
-       "      <td>2.071000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>295</th>\n",
-       "      <td>3836</td>\n",
-       "      <td>2.104000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>297</th>\n",
-       "      <td>3850</td>\n",
-       "      <td>2.056000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      FID       MAX\n",
-       "23    425  2.186000\n",
-       "49    795  2.458250\n",
-       "59    851  2.202063\n",
-       "62    891  2.448000\n",
-       "292  3825  2.071000\n",
-       "295  3836  2.104000\n",
-       "297  3850  2.056000"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "houses[houses[\"MAX\"] > DREMPEL]"
+    "import json\n",
+    "from colour import Color as clr\n",
+    "from PIL import Image, ImageDraw, ImageFont\n",
+    "\n",
+    "save_location = r\"C:\\Users\\david\\Documenten\\Jaar 2\\B\\BS\\AI-2020-BS-GP\\data\""
    ]
   },
   {
@@ -248,7 +25,109 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "DREMPEL = 0.02 #m\n",
+    "YEARS = 20\n",
+    "SAG = 0.1 #cm/year\n",
+    "RAINHEIGHTS = [32,40,47,58]\n",
+    "CHANCES = {25:15, 32:87.8, 40:55.8, 47:33.2, 58:18.2} #mm rain to once in x years"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined = pd.DataFrame(columns = ['FID','MAX'])\n",
+    "for rainHeight in RAINHEIGHTS:\n",
+    "    try:\n",
+    "        houses = pd.read_csv(f'data/waterInHuizen_{rainHeight}.csv', usecols=['FID','MAX'])\n",
+    "        houses = houses[houses[\"MAX\"] > DREMPEL]\n",
+    "        houses['CHANCE'] = CHANCES[rainHeight]\n",
+    "        combined = pd.concat([combined,houses])\n",
+    "    except FileNotFoundError:\n",
+    "        print(f'File waterInHuizen_{rainHeight}.csv not found')\n",
+    "combined = combined.drop_duplicates(subset=['FID'], keep='first')\n",
+    "combined.to_csv('data\\generated\\combined_affected_houses.csv', index = False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = combined['CHANCE'].nunique()\n",
+    "unique = combined['CHANCE'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors = list(clr('red').range_to(clr(\"yellow\"),n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = Image.open(save_location+r\"\\generated\\ProjectDataFrame.png\")\n",
+    "width, height = image.size\n",
+    "width, height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw = ImageDraw.Draw(image)\n",
+    "text = 'Kans in 20 jaar'\n",
+    "fontSize = 28\n",
+    "margin = fontSize /5\n",
+    "\n",
+    "font = ImageFont.truetype(\"arial.ttf\", fontSize)\n",
+    "textwidth, textheight = draw.textsize(text,font=font)\n",
+    "\n",
+    "textwidth, textheight, text, tuple([int(255*x) for x in colors[1].rgb])\n",
+    "draw.multiline_text((0, 0), text, (0,0,0), font=font)\n",
+    "textwidth, textheight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(n+1):\n",
+    "    blockHeight = (textheight + margin) * (i+1)\n",
+    "    blockWidth = 20\n",
+    "    if i != n:\n",
+    "        draw.multiline_text((blockWidth + 10, blockHeight), \"{}%\".format(unique[i]), (0,0,0), font=font)\n",
+    "        draw.rectangle([0, blockHeight+5, blockWidth, blockHeight+25],outline=(0,0,0),fill=tuple([int(255*x) for x in colors[i].rgb]))\n",
+    "    else:\n",
+    "        draw.multiline_text((blockWidth + 10, blockHeight), \"Ongehinderd\", (0,0,0), font=font)\n",
+    "        draw.rectangle([0, blockHeight+5, blockWidth, blockHeight+25],outline=(0,0,0),fill=tuple([int(255*x) for x in clr('green').rgb]))\n",
+    "        \n",
+    "image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image.save(save_location+r\"\\generated\\ProjectDataFrame.png\")"
+   ]
   }
  ],
  "metadata": {
